# SelectiveJSONParser

./: .gitignore  PYPI_RELEASE_GUIDE.md  README.md  build.ps1  create_env.ps1  pyproject.toml
src/selectivejsonparser/: __init__.py
src/selectivejsonparser/parser/: parser.py
src/selectivejsonparser/pattern/: __init__.py  element.py  pattern.py  pattern_parser.py
tests/parser/: test_parser.py
tests/pattern/: test_pattern.py  test_pattern_parser.py
